--- a/SysBank/Views/Shared/_Layout.cshtml
+++ b/SysBank/Views/Shared/_Layout.cshtml
@@ -22,6 +22,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Strona startowa", "Index", "Home")</li>
+@if (Request.IsAuthenticated)
+{
                     <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
                     <li class="dropdown">
                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Karty płatniczne <span class="caret"></span></a>
@@ -29,7 +31,7 @@
     <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-plus-sign"></span> Wniosek o nową kartę płatniczą</a></li>
     <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/"><span class="glyphicon glyphicon-list"></span> Lista kart płatnicznych</a></li>
 
-</ul></li>
+</ul></li>}
                     
                 </ul>
                 @Html.Partial("_LoginPartial")
