--- a/SysBank/Views/Shared/_Layout.cshtml
+++ b/SysBank/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>SysBank</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
 
 </head>
 <body>
@@ -22,17 +24,19 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Strona startowa", "Index", "Home")</li>
-@if (Request.IsAuthenticated)
-{
-                    <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
-                    <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Karty płatniczne <span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="#"><span class="glyphicon glyphicon-plus-sign"></span> Wniosek o nową kartę płatniczą</a></li>
-    <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/"><span class="glyphicon glyphicon-list"></span> Lista kart płatnicznych</a></li>
+                    @if (Request.IsAuthenticated)
+                    {
+                        <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Karty płatniczne <span class="caret"></span></a>
+                            <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/BaseCardApplication"><span class="glyphicon glyphicon-plus-sign"></span> Wniosek o nową kartę płatniczą</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/ApplicationList"><span class="glyphicon glyphicon-list"></span> Lista Twoich wniosków</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/"><span class="glyphicon glyphicon-list"></span> Lista kart płatnicznych</a></li>
 
-</ul></li>}
-                    
+                            </ul>
+                        </li>}
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -46,8 +50,7 @@
         </footer>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+
     @RenderSection("scripts", required: false)
 </body>
 </html>
