--- a/SysBank/Views/PaymentCards/BaseCardApplication.cshtml
+++ b/SysBank/Views/PaymentCards/BaseCardApplication.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "BaseCardApplication";
 }
 
-<h2>BaseCardApplication</h2>
+<h2>Wnioski o kartę płatniczą</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
