--- a/SysBank/Views/Shared/EditorTemplates/ATMCardApplication.cshtml
+++ b/SysBank/Views/Shared/EditorTemplates/ATMCardApplication.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "ATMCardApplication";
 }
 
-<h2>ATMCardApplication</h2>
+
 
     
     <div class="form-horizontal">
-    <h4>ATMCardApplication</h4>
+        <h2>Karta bankomatowa</h2>
     <hr />
     @if (Model.Accounts.Any())
     {
