--- a/SysBank/Views/Shared/EditorTemplates/CreditCardApplication.cshtml
+++ b/SysBank/Views/Shared/EditorTemplates/CreditCardApplication.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "CreditCardApplication";
 }
 
-<h2>CreditCardApplication</h2>
+
 
     
     <div class="form-horizontal">
-        <h4>CreditCardApplication</h4>
+        <h2>Karta kredytowa</h2>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
