--- a/SysBank/Views/Shared/EditorTemplates/DebitCardApplication.cshtml
+++ b/SysBank/Views/Shared/EditorTemplates/DebitCardApplication.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "DebitCardApplication";
 }
 
-<h2>DebitCardApplication</h2>
+
 
 
 <div class="form-horizontal">
-    <h4>DebitCardApplication</h4>
+    <h2>Karta debetowa</h2>
     <hr />
     @if (Model.Accounts.Any())
     {
