Ostatnie poprawki do chowania pewnych części menu. Poprawienie literówek.

--- a/SysBank/Views/Account/ForgotPassword.cshtml
+++ b/SysBank/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model SysBank.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "Zapomniałeś hasła?";
 }
 
 <h2>@ViewBag.Title.</h2>
