--- a/SysBank/Views/Account/ResetPasswordConfirmation.cshtml
+++ b/SysBank/Views/Account/ResetPasswordConfirmation.cshtml
@@ -7,6 +7,6 @@
 </hgroup>
 <div>
     <p>
-        Your password has been reset. Please @Html.ActionLink("click here to log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
+        Twoje hasło zostało zresetowane. Kliknij tutaj aby się @Html.ActionLink("zalogować", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })
     </p>
 </div>
