--- a/SysBank/Views/Shared/_Layout.cshtml
+++ b/SysBank/Views/Shared/_Layout.cshtml
@@ -26,18 +26,20 @@
                     <li>@Html.ActionLink("Strona startowa", "Index", "Home")</li>
                     @if (Request.IsAuthenticated && !User.IsInRole("Administrator"))
                     {
-                        <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
+                       
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Karty płatniczne <span class="caret"></span></a>
                             <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/BaseCardApplication"><span class="glyphicon glyphicon-plus-sign"></span> Wniosek o nową kartę płatniczą</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/ApplicationList"><span class="glyphicon glyphicon-list"></span> Lista Twoich wniosków</a></li>
                                 <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/"><span class="glyphicon glyphicon-list"></span> Lista kart płatnicznych</a></li>
+                                <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/PaymentCardsOperationHistory"><span class="glyphicon glyphicon-list"></span> Lista transakcji</a></li>
 
                             </ul>
                         </li>}
                             @if (Request.IsAuthenticated && User.IsInRole("Administrator"))
                             {
+                                <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
                                 <li>@Html.ActionLink("Akceptacja wniosków", "ApplicationAcceptanceList", "PaymentCards")</li>
                             }
 
