--- a/SysBank/Views/PaymentCards/ATMCardSim.cshtml
+++ b/SysBank/Views/PaymentCards/ATMCardSim.cshtml
@@ -31,7 +31,21 @@
         <dd>
             @Html.DisplayFor(model => model.UsedLimit)
         </dd>
+        
+        <dt>
+            @Html.DisplayNameFor(model => model.OperationsCount)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.OperationsCount)
+        </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.UsedOperationsCount)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UsedOperationsCount)
+        </dd>
         <dt>
             @Html.DisplayNameFor(model => model.BaseCard.CreationDateShort)
         </dt>
@@ -93,6 +107,8 @@
     @Html.HiddenFor(x => x.ErrorDetails)
     @Html.HiddenFor(x => x.UsedLimit)
     @Html.HiddenFor(x => x.UserId)
+    @Html.HiddenFor(x => x.OperationsCount)
+    @Html.HiddenFor(x => x.UsedOperationsCount)
     <input type="submit" name="ATMWithdrawMoney" value="Wypłać pieniądze" />
     <input type="submit" name="ATMDepositMoney" value="Wpłać pieniądze" />}
 </div>
