--- a/SysBank/Views/Shared/_Layout.cshtml
+++ b/SysBank/Views/Shared/_Layout.cshtml
@@ -38,9 +38,15 @@
                             </ul>
                         </li>}
                             @if (Request.IsAuthenticated && User.IsInRole("Administrator"))
-                            {
-                                <li>@Html.ActionLink("Lista użytkowników", "Index", "Users")</li>
+                            {                                
                                 <li>@Html.ActionLink("Akceptacja wniosków", "ApplicationAcceptanceList", "PaymentCards")</li>
+    <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Akceptacja transakcji <span class="caret"></span></a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+            <li role="presentation"><a role="menuitem" tabindex="-1" href="~/PaymentCards/DebitTransactionAcceptance">Akceptacja transakcji kart debetowych</a></li>
+
+        </ul>
+    </li>
                             }
 
                 </ul>
